
[package]
name = "classmateback"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"  # Framework para desarrollar aplicaciones web en Rust
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }  # Biblioteca para serialización y deserialización de datos
serde_json = "1.0"  # Soporte JSON para serde
[target.'cfg(all(target_arch = "x86_64", target_os = "windows"))'.dependencies]
rusqlite = { version = "0.25.0", features = ["bundled"] }
bcrypt = "0.10.0"
tokio = { version = "1", features = ["full"] }  # Biblioteca para manejar E/S asincrónica
dotenv = "0.15.0"  # Biblioteca para cargar variables de entorno desde un archivo .env
actix-cors = "0.7.0"
# Opcional: si quieres trabajar con una base de datos SQLite
diesel = { version = "2.1.5", features = ["sqlite"] }  # ORM para trabajar con bases de datos en Rust
